# rust-bucket

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  mpu.rs  paste_id.rs  tests.rs
static/: api.txt  index.html
